# Remote-Mic

./: .gitignore  ATTRIBUTIONS.md  Cargo.toml  Dioxus.toml  Info.plist  LICENSE  README.md  build.rs
.github/workflows/: build-release.yml
assets/icon/: icon.icns
docs/: audio_pipeline.md  developer_guide.md  protocol.md  security.md
lang/: en.json  zh.json
src/: audio.rs  buffers.rs  client.rs  dioxus_gui.rs  lang.rs  main.rs  net.rs  server.rs  types.rs
