[package]
name = "remote-mic"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
cpal = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
dashmap = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"
get_if_addrs = "0.5"
once_cell = "1"
dioxus = { version = "0.6.3" }
dioxus-desktop = "0.6.3"
rfd = "0.14"
sha2 = "0.10"
chacha20poly1305 = { version = "0.10", features=["std"] }



[dev-dependencies]
pretty_assertions = "1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
